# safe-dict

./: README.md  setup.cfg
safedict/: __init__.py  safedict.py
src/: __init__.py
