[metadata]
name = safe-dict
version = 1.0.3
author = robinhust
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robbinhust/safe-dict
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
